Updated service namespace

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,16 @@
 {
     "name": "aldoanizio/carteiro",
     "type": "mako-package",
+    "description": "Lightweight SMTP Mailer Class for Mako Framework 4.0",
+    "keywords": ["mako", "framework", "mail"],
+    "homepage": "https://github.com/aldoanizio/carteiro",
+    "authors": [
+        {
+            "name": "Aldo Anizio Lugão Camacho",
+            "email": "aldoanizio@yahoo.com.br",
+            "homepage": "http://www.visualcode.com.br"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "carteiro\\": "classes"
